--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.android.support:preference-v14:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'org.apache.commons:commons-math3:3.6.1'
     compile project(":android-library")
 }
