--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.github.axet.audiorecorder"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 56
-        versionName "1.1.35"
+        versionCode 57
+        versionName "git"
     }
     signingConfigs {
         release {
