--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.github.axet.audiorecorder"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 57
-        versionName "git"
+        versionCode 58
+        versionName "1.1.36"
     }
     signingConfigs {
         release {
