--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.github.axet:android-library:1.8.2' // compile project(':android-library')
+    compile 'com.github.axet:jebml:0.0.1' // compile project(':jebml')
 }
