use separate vorbis repo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':android-library', ':jebml', ':vorbis', ':vorbis:libogg', ':vorbis:libvorbis'
+include ':app', ':android-library', ':jebml'
