--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,5 @@ dependencies {
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.github.axet:android-library:1.9.1' // compile project(':android-library')
     compile 'com.github.axet:jebml:0.0.2' // compile project(':jebml')
-    debugCompile project(path: ':vorbis', configuration: "libraryDebug")
-    releaseCompile project(path: ':vorbis', configuration: "libraryRelease")
+    compile 'com.github.axet:vorbis:1.0.0' // compile project(':vorbis')
 }
