--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.github.axet.audiorecorder"
+        applicationId "com.github.axet.callrecorder"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 105
-        versionName "1.4.3"
+        versionCode 1
+        versionName "0.0.1"
     }
     signingConfigs {
         release {
@@ -43,12 +43,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'org.apache.commons:commons-math3:3.6.1'
-    compile 'com.github.axet:android-library:1.9.7' //compile project(':android-library')
-    compile 'com.github.axet:jebml:0.0.2' // compile project(':jebml')
-    compile 'com.github.axet:vorbis:1.0.0' // compile project(':vorbis')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile project(':android-audio-library')
 }
