--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.axet.audiorecorder"
+    package="com.github.axet.callrecorder"
     android:installLocation="auto">
 
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:name=".app.MainApplication"
+        android:name="com.github.axet.callrecorder.app.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppThemeLight">
-        <service android:name=".services.RecordingService" />
+        <service android:name="com.github.axet.callrecorder.services.RecordingService" />
 
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name="com.github.axet.callrecorder.activities.SettingsActivity"
             android:label="@string/app_name" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.github.axet.callrecorder.activities.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:theme="@style/AppThemeLight.NoActionBar">
             <intent-filter>
@@ -32,10 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.RecordingActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:launchMode="singleInstance" />
     </application>
 
 </manifest>
