--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':android-audio-library', ':android-library', ':jebml', ':android-vorbis'
+include ':app', ':android-audio-library', ':android-library', ':jebml', ':android-vorbis', ':android-vorbis:libvorbis', ':android-vorbis:libogg'
