--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeLight">
+        android:theme="@style/RecThemeLight">
         <service android:name="com.github.axet.callrecorder.services.RecordingService" />
 
         <receiver android:name=".services.OnBootReceiver">
@@ -47,7 +47,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
-            android:theme="@style/AppThemeLight.NoActionBar">
+            android:theme="@style/RecThemeLight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
