--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+import com.android.build.OutputFile
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -35,8 +37,19 @@ android {
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             def file = output.packageApplication.outputFile
-            def fileName = org.apache.commons.io.FilenameUtils.getExtension(android.defaultConfig.applicationId) + "-" + android.defaultConfig.versionName + "-" + variant.buildType.name + ".apk"
+            def abi = output.getFilter(OutputFile.ABI)
+            if (abi == null)
+                abi = "universal";
+            def fileName = org.apache.commons.io.FilenameUtils.getExtension(android.defaultConfig.applicationId) + "-" + abi + "-" + android.defaultConfig.versionName + "-" + variant.buildType.name + ".apk"
             output.packageApplication.outputFile = new File(file.parent, fileName)
+        }
+    }
+    splits {
+        abi {
+            enable true
+            reset()
+            include "x86", "armeabi-v7a", "mips"
+            universalApk true
         }
     }
 }
