--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
     <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
 
     <application
-        android:name="com.github.axet.callrecorder.app.MainApplication"
+        android:name=".app.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/RecThemeLight">
-        <service android:name="com.github.axet.callrecorder.services.RecordingService" />
+        <service android:name=".services.RecordingService" />
 
         <receiver android:name=".services.OnBootReceiver">
             <intent-filter>
@@ -32,6 +32,7 @@
         <receiver android:name=".services.OnUpgradeReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_REPLACED" />
+
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
@@ -42,10 +43,10 @@
         </receiver>
 
         <activity
-            android:name="com.github.axet.callrecorder.activities.SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/app_name" />
         <activity
-            android:name="com.github.axet.callrecorder.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
@@ -56,6 +57,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.CallActivity"
+            android:label="@string/app_name"
+            android:theme="@style/NoDisplay"></activity>
     </application>
 
 </manifest>
