--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ import com.android.build.OutputFile
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.github.axet.callrecorder"
@@ -36,12 +36,10 @@ android {
     }
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
-            def file = output.packageApplication.outputFile
             def abi = output.getFilter(OutputFile.ABI)
             if (abi == null)
                 abi = "universal";
-            def fileName = org.apache.commons.io.FilenameUtils.getExtension(android.defaultConfig.applicationId) + "-" + abi + "-" + android.defaultConfig.versionName + "-" + variant.buildType.name + ".apk"
-            output.packageApplication.outputFile = new File(file.parent, fileName)
+            output.outputFileName = org.apache.commons.io.FilenameUtils.getExtension(android.defaultConfig.applicationId) + "-" + abi + "-" + android.defaultConfig.versionName + "-" + variant.buildType.name + ".apk"
         }
     }
     splits {
@@ -56,6 +54,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.github.axet:android-audio-library:1.0.48' // compile project(':android-audio-library')
+    // compile 'com.github.axet:android-audio-library:1.0.48'
+    compile project(':android-audio-library')
     testCompile 'junit:junit:4.12'
 }
