--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    // compile 'com.github.axet:android-audio-library:1.0.48'
-    compile project(':android-audio-library')
+    compile 'com.github.axet:android-audio-library:1.0.49' // compile project(':android-audio-library')
     testCompile 'junit:junit:4.12'
 }
